--- a/report.html
+++ b/report.html
@@ -1,7 +1,8 @@
 <html>
 
       <head><title>核酸检测在线报告</title></head>
-      <body>
+      <body widget: 100%;>
+            
             <style>
                   .red{
                       background: red;
