--- a/report.html
+++ b/report.html
@@ -1,7 +1,7 @@
 <html>
 
       <head><title>核酸检测在线报告</title></head>
-      <body widget: 100%;>
+      <body width: 100%;>
             
             <style>
                   .red{
