--- a/report.html
+++ b/report.html
@@ -17,7 +17,7 @@
           
             <div style="display: block; margin: 0 auto; width: 50%; backgroun: #ccc;font-size:62.5%;" class="grey">
                   
-                  <div class="white">
+                  <div class="white" class="grey>
                         <p>检查项目：新型冠状病毒核酸检测(含相关试剂)</p>
                         <p>就诊人：王跃霖</p>
                         <p>检查时间：2022-12-11  15:06:50</p>
