--- a/report.html
+++ b/report.html
@@ -17,14 +17,14 @@
           
             <div style="display: block; margin: 0 auto; width: 50%; backgroun: #ccc;font-size:62.5%;" class="grey">
                   
-                  <div class="white" class="grey>
+                  <div class="white" >
                         <p>检查项目：新型冠状病毒核酸检测(含相关试剂)</p>
                         <p>就诊人：王跃霖</p>
                         <p>检查时间：2022-12-11  15:06:50</p>
                         <p>项目类型：检验项目</p>
                   </div>
                   <table style="border:1px solid black;" class="white"> 
-                        <tr  align="center">
+                        <tr  align="center" class="grey">
                               <th width="160">检查项目</th>
                               <th width="100">结果</th>
                               <th width="100">参考范围</th>
